// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PossibleElement snapshots should render PossibleElement 1`] = `
<DocumentFragment>
  <div
    class="css-1wum52v PossibleElement"
    data-test-box=""
    style="height: 0px; left: 0px; position: absolute; top: 0px; width: 0px;"
  >
    <small
      class="css-2lfa8s PossibleElement__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="width: 0px; text-align: inherit;"
    >
      Frame
    </small>
    <svg
      class="Corners"
      style="height: 0px; left: 0px; top: 0px; width: 0px;"
    >
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-4.5"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-4.5"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-4.5"
        y="-4.5"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`PossibleElement snapshots should render when parent has position relative 1`] = `
<DocumentFragment>
  <div
    class="css-1wum52v PossibleElement"
    data-test-box=""
    style="height: 0px; left: 0px; position: relative; top: 0px; width: 0px;"
  >
    <small
      class="css-2lfa8s PossibleElement__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="width: 0px; text-align: inherit;"
    >
      Frame
    </small>
    <svg
      class="Corners"
      style="height: 0px; left: 0px; top: 0px; width: 0px;"
    >
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-4.5"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-4.5"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-4.5"
        y="-4.5"
      />
    </svg>
  </div>
</DocumentFragment>
`;
